# TradeLog-Validator

./: .gitignore  pyproject.toml  readme.md
trade_log_validator/: __init__.py  functional_main.py  result.py  universal_checks.py  universal_info_checks.py
trade_log_validator/tests/: README.md  __init__.py  conftest.py  test_checks.py
